@@ -1,5 +1,11 @@
 2021-04-05  Allen D. Ball  <ball@hcf.dev>
 
+	* Refactored Renderer hierarchy.  Replaced @ForType with @ForClass
+	and @ForClassName (the latter used to identify classes that may
+	not be available).  Moved RendererMap key calculation to
+	RendererMap private methods and do not attempt to load Renderer
+	providers if the @ForClassName target is not available.
+
 	* src/main/java/ganymede/util/ServiceProviderMap.java:
 	Added getClassLoader() and reload(Predicate<Class<?>>) methods.
 
